# wasi-nn-onnx

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: rust.yml
crates/wasi-nn-onnx-wasmtime/: Cargo.toml  build.rs
crates/wasi-nn-onnx-wasmtime/src/: bytes.rs  ctx.rs  lib.rs  onnx_runtime.rs  tract.rs  wasi_nn_onnx.rs  witx.rs
src/: ctx.rs  wasi_nn_onnx.rs  witx.rs
tests/: integration.rs
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs  main.rs
tests/testdata/models/: identity_input_output.onnx  identity_model.py
