[package]
name = "wasi-nn-onnx-sample"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", default-features = false }
env_logger = "0.8"
structopt = "0.3.21"
tokio = { version = "1.4.0", features = ["full"] }
wasmtime = "0.28"
wasmtime-runtime = "0.28"
wasmtime-wasi = "0.28"
wasi-common = "0.28"
wasi-cap-std-sync = "0.28"
wasi-experimental-http-wasmtime = "0.5"
wasi-nn-onnx-wasmtime = { path = "./crates/wasi-nn-onnx-wasmtime" }

[[bin]]
name = "wasmtime-onnx"
path = "bin/wasmtime-onnx.rs"

[workspace]
members = [
    "crates/wasi-nn-onnx-wasmtime",
    "crates/wasi-nn/rust",
    "tests/rust"
]
