[package]
name = "wasi-nn-rust"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
env_logger = "0.8"
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
ndarray = "0.15"
log = { version = "0.4", default-features = false }
wasi-nn = { path = "../../crates/wasi-nn/rust" }
